# tailscale-dmenu

./: .gitignore  Cargo.toml  Justfile  LICENSE.md  README.md  TODO.md  deny.toml  flake.nix  shell.nix
.github/workflows/: audit-check.yml
src/: bluetooth.rs  command.rs  iwd.rs  main.rs  mullvad.rs  networkmanager.rs  tailscale.rs  utils.rs
