[package]
name = "network-dmenu"
version = "1.5.0"
edition = "2021"
authors = ["Cyril Levis"]
categories = ["gui"]
keywords = ["tailscale", "dmenu", "network", "vpn", "wifi"]
description = "A dmenu-based Tailscale and Wi-Fi network selector with support for NetworkManager and iwd."
readme = "README.md"
license = "MIT"
homepage = "https://github.com/cyrinux/network-dmenu"
repository = "https://github.com/cyrinux/network-dmenu"

[dependencies]
dirs = { version = "~5.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "~0.8", features = ["default"] }
regex = { version = "~1.10", features = ["default"] }
reqwest = { version = "~0.12", features = ["blocking", "default"] }
notify-rust = { version = "4", features = ["default"] }
which = { version = "~6.0" }
clap = { version = "4", features = ["derive"] }
