[package]
name = "network-dmenu"
version = "1.6.0"
edition = "2021"
authors = ["Cyril Levis"]
categories = ["gui"]
keywords = ["tailscale", "dmenu", "network", "vpn", "wifi"]
description = "A dmenu-based Tailscale and Wi-Fi network selector with support for NetworkManager and iwd."
readme = "README.md"
license = "MIT"
homepage = "https://github.com/cyrinux/network-dmenu"
repository = "https://github.com/cyrinux/network-dmenu"

[dependencies]
dirs = { version = "~5.0" }
serde = { version = "1", default-features = false }
serde_json = "1"
toml = { version = "~0.8", features = ["parse"], default-features = false }
regex = { version = "~1.10", default-features = false }
reqwest = { version = "~0.12", features = ["blocking", "default-tls", "charset"], default-features = false }
notify-rust = { version = "4", features = ["default"], default-features = false }
which = { version = "~6.0" }
clap = { version = "4", features = [
  "suggestions",
  "help",
  "usage",
  "color",
  "derive",
  "std",
], default-features = false }
ipaddress = "~0.1"
